--- a/package.json
+++ b/package.json
@@ -4,26 +4,37 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "node src/server.ts",
+    "start": "node ./dist/server.js",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "test": "jasmine-ts",
+    "test": "yarn tsc && db-migrate db:create mytestdb && db-migrate up --config database.json -e test && ENV=test jasmine ; db-migrate db:drop mytestdb",
     "tsc": "tsc"
   },
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
-    "typescript": "^4.1.3",
-    "pg": "^8.5.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.5.1",
+    "pg-format": "^1.0.4",
+    "reflect-metadata": "^0.1.13",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.9",
     "@types/jasmine": "^3.6.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^7.14.7",
+    "@types/pg-format": "^1.0.2",
+    "@types/supertest": "^2.0.12",
     "jasmine": "^3.6.4",
-    "jasmine-spec-reporter": "^6.0.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "jasmine-ts": "^0.3.0",
+    "supertest": "^6.3.3",
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9"
   }
